library/DirectDraw.h

extern "C" __declspec(dllexport) BOOL __cdecl InitDirectDraw(HINSTANCE, HINSTANCE);
extern "C" __declspec(dllexport) BOOL __cdecl CreateDirectDrawWindow(EmuState*);
extern "C" __declspec(dllexport) float __cdecl Static(EmuState*);
extern "C" __declspec(dllexport) void __cdecl ClearScreen();
extern "C" __declspec(dllexport) void __cdecl DoCls(EmuState*);
extern "C" __declspec(dllexport) void __cdecl FullScreenToggle();
extern "C" __declspec(dllexport) void __cdecl SetStatusBarText(char*, EmuState*);