library/Throttle.h

extern "C" __declspec(dllexport) void __cdecl CalibrateThrottle();
extern "C" __declspec(dllexport) void __cdecl EndRender(unsigned char);
extern "C" __declspec(dllexport) void __cdecl FrameWait();
extern "C" __declspec(dllexport) void __cdecl StartRender();